workshop-real/examples/force-app/main/default/objects/Store__c/Store__c.object-meta.xml
<CustomObject>
    <description>店舗マスタ。各店舗の基本情報を管理する。</description>
    <label>店舗</label>
    <nameField>
        <displayFormat>STORE-{0000}</displayFormat>
        <label>店舗名</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>店舗</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>