workshop-real/examples/force-app/main/default/objects/Store__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>店舗の住所</description>
    <label>住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>