workshop-real/examples/force-app/main/default/objects/Store__c/fields/AverageRating__c.field-meta.xml
<CustomField>
    <fullName>AverageRating__c</fullName>
    <description>訪問記録の平均評価（トリガーで自動計算）</description>
    <label>平均評価</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>