workshop-real/examples/force-app/main/default/objects/Store__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>店舗が有効かどうか</description>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>