workshop-real/examples/force-app/main/default/objects/Store__c/fields/LastVisitDate__c.field-meta.xml
<CustomField>
    <fullName>LastVisitDate__c</fullName>
    <description>最後に訪問された日付（トリガーで自動更新）</description>
    <label>最終訪問日</label>
    <type>Date</type>
</CustomField>