workshop-real/examples/force-app/main/default/objects/Store__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>店舗の電話番号</description>
    <label>電話番号</label>
    <type>Phone</type>
</CustomField>