workshop-real/examples/force-app/main/default/objects/Store__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>店舗が所属するエリア/地域</description>
    <label>地域</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>北海道・東北</fullName>
            </value>
            <value>
                <fullName>関東</fullName>
                <default>true</default>
                <label>関東</label>
            </value>
            <value>
                <fullName>中部</fullName>
            </value>
            <value>
                <fullName>関西</fullName>
            </value>
            <value>
                <fullName>中国・四国</fullName>
            </value>
            <value>
                <fullName>九州・沖縄</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>