workshop-real/examples/force-app/main/default/objects/Store__c/fields/StoreCode__c.field-meta.xml
<CustomField>
    <fullName>StoreCode__c</fullName>
    <description>店舗を一意に識別するコード</description>
    <externalId>true</externalId>
    <label>店舗コード</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>