workshop-real/examples/force-app/main/default/objects/Store__c/fields/StoreManager__c.field-meta.xml
<CustomField>
    <fullName>StoreManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>店舗の責任者（ユーザー参照）</description>
    <label>店長</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ManagedStores</relationshipName>
    <type>Lookup</type>
</CustomField>