workshop-real/examples/force-app/main/default/objects/Store__c/fields/StoreName__c.field-meta.xml
<CustomField>
    <fullName>StoreName__c</fullName>
    <description>店舗の表示名</description>
    <label>店舗名称</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>